# Jenkins_Priv_Repo

./: CMakeLists.txt  HelloWorld.java  Jenkinsfile  README.md  depends.py  holamundo.java  holamundo.py  mimodulo.c  readme.md  sonar-project.properties
scripts/: setup.py
